# gps-attack

./: .gitignore  DEBUG_FAQ.md  DESIGN_PRACTICES.md  GLOSSARY.md  README.md  clear_persistent.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_simulation.sh
attack/: drift_attack.py  dynamic_attack.py  fabric_attack.py  gps_attack.py  gps_attack_params.yaml  gps_hook.py  passthrough_attack.py  replay_attack.py  static_attack.py
attack/presets/: canberra.yaml  canberra_attack_params.yaml  drift.yaml  dynamic.yaml  ornl.yaml  passthrough.yaml  replay.yaml  static.yaml
communication/: connect_to_sitl.py  connect_to_sitl_params.yaml  connection_config.py  sitl_connection.py  sitl_connection_config.py  sitl_connection_params.yaml
docker/: Dockerfile  docker.env  entrypoint.sh
drone/: compass.py  drone.py  gps_receiver.py  imu.py
drone/configs/: gps_receiver_params.yaml
plans/: ornl.plan  spawn_point_lookup.yaml
sim/: baseline_waypoints.plan  configure_sitl.py  load_scenario.py  scenario_config.py  set_scenario_params.py  sitl_params.yaml
simulation/: run_simulation.py
spoofer/: sdr.py  sdr_config.py  sdr_params.yaml
tests/attack/: test_drift_attack.py  test_passthrough_attack.py  test_static_attack.py
tests/communication/: test_sitl_connection.py
tests/communication/fixtures/: sitl_connection_params.yaml
tests/drone/: test_gps_receiver.py
