[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-attack"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pymavlink>=2.4.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["attack*", "communication*", "drone*", "simulation*", "spoofer*"]
